# SwibitBackendEngineer-BackendTest

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 73d051eb3ac3_initial_schema.py  ae04ff8fa3c4_fresh_schema.py  b49dc078a1f0_added_users.py  c7a3d9b2e1f0_added_timestamps_to_project_and_task.py  e4f8c2a9d1b0_added_export_table.py
app/: app.py  celery_app.py  minio_client.py
app/api/: users.py
app/api/routes/: __init__.py  course.py  export.py  homework.py  project.py  task.py
app/db/: session.py
app/models/: __init__.py  course.py  export.py  homework.py  project.py  task.py  user.py
app/repositories/: course_repository.py  export_repository.py  homework_repository.py  project_repository.py  task_repository.py
app/schemas/: course.py  export.py  homework.py  project.py  task.py  user.py
app/services/: course_service.py  export_service.py  homework_service.py  project_service.py  task_service.py
app/tasks/: user_tasks.py
tests/: conftest.py  test_api.py
