[project]
name = "swibitbackendengineer-backendtest"
version = "0.1.0"
description = "Backend Test by Swibit"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.139.0",
    "minio>=7.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
