[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swibitbackendengineer-backendtest"
version = "0.1.0"
description = "Backend Test by Swibit"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.3.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.139.0",
    "minio>=7.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
